2007-06-27  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/agents/open.py (_show_parse_error_dialog):
	Change message wording.

2007-06-27  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/agents/register.py (_shift_changed_value):
	* gaupol/agents/util.py (_get_format):
	* gaupol/gtk/agents/save.py (save_translation_document):
	Update references to renamed variables and methods.

	* gaupol/gtk/agents/close.py:
	* gaupol/gtk/dialogs/multiclose.py:
	Actually close pages in proper methods and raise Defaults in proper
	places to handle cancellations correctly.

2007-06-26  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* setup.py:
	Fix OSError with initial change of working directory.

2007-06-26  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/__init__.py:
	* gaupol/gtk/main.py:
	Move move stuff from main to __init__.
	Rearrange imports in main.

2007-06-26  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/glade/debug-dialog.glade:
	* data/glade/open-dialog.glade:
	* data/glade/preferences-dialog.glade:
	* data/glade/save-dialog.glade:
	* data/glade/spellcheck-dialog.glade:
	Set translatability of gtk-* labels to false.
	Split preview command fields label in the preferences dialog to
	translatable and non-translatable labels.

	* setup.py:
	Remove no longer existing icons from data_files.

	* tools/add-changelog:
	* tools/generate-tests:
	* tools/hide:
	* tools/list-glade:
	* tools/nose-run:
	* tools/pydoctor:
	* tools/pylint:
	Get rid of bashisms and use /bin/sh.

	* tools/translate:
	Extract strings directly from Glade XML files.

2007-06-25  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/conf/container.py:
	* gaupol/gtk/conf/__init__.py:
	Copy defaults dictionary in __init__.restore_defaults instead
	of Container.update in order to save correct configuration.

2007-06-24  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/conf/container.py:
	* gaupol/gtk/conf/__init__.py:
	* gaupol/gtk/unittest/case.py:
	Try to make the gtk unittests a little bit faster.
